--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 body{
 background:#eaeaea;
 font-family:Arial;
+  <link rel="stylesheet" href="style.css">
 }
 
 .box{
@@ -40,3 +41,4 @@ border:none;
 
 </body>
 </html>
+
