--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css">
+ 
 <title>Enrollment System</title>
 
 <style>
@@ -41,6 +43,7 @@ border:none;
 
 </body>
 </html>
+
 
 
 
